# streamlit-rag-chatbot

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USER_MANUAL.md  chats.py  cliff.toml  create_relational_db.py  db.py  debug.md  doc_sage.sqlite  mypy.ini  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  skills.md  structured_functions.py  vector_functions.py
.agents/skills/bug-fixer/: SKILL.md
.agents/skills/dependency-checker/: SKILL.md
.agents/skills/git-commit-writer/: SKILL.md
.agents/skills/readme-writer/: SKILL.md
.agents/skills/skill-writer/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
persist/: chroma.sqlite3
specs/document-qa/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_chats_helpers.py  test_db.py  test_structured_functions.py
tests/fixtures/: sample.txt
